# EdgeViewer

app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  native-lib.cpp
app/src/main/cpp/utils/: opencv_helpers.cpp  opencv_helpers.h
app/src/main/java/com/example/edgeviewer/: CameraController.kt  GLView.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/edgeviewer/enums/: Mode.kt
app/src/main/java/com/example/edgeviewer/opengl/: GLRenderer.kt  GLTexture.kt  ShaderUtils.kt  fragment_shader.glsl
app/src/main/java/com/example/edgeviewer/utils/: ImageUtils.kt
app/src/main/jnilibs/include/opencv2/dnn/: dnn.hpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
opengl/: GLRenderer.kt  RenderSurface.kt  ShaderUtils.kt  vertex_shader.glsl
scripts/: build_web.sh  run_web.sh
web/: index.html  main.ts  styles.css  tsconfig.json
web/helpers/: dom.ts  image_loader.ts
